Разработка home страницы. Добалены блоки (header, hero, partner-links,  business-intro, achievements)

--- a/ui.html
+++ b/ui.html
@@ -355,6 +355,14 @@
       </div>
     </div>
 
+    <hr><hr>
+
+    <a href="#" class="logo">
+      <svg class="logo__icon">
+        <use xlink:href="#logo"></use>
+      </svg>
+    </a>
+
   </div>
 
 
