--- a/ui.html
+++ b/ui.html
@@ -100,6 +100,8 @@
 
   <hr>
 
+  <!-- при найминге button--bg-orange ориентир на обстракцию пример :Primary Color, Secondary Color, и т.д -->
+
   <a href="" class="button button--bg-orange">Get Started</a>
 
   <hr><hr>
@@ -179,11 +181,13 @@
     </a>
 
     <hr>
+
+    
   
     <a href="" class="button button--light">With One Click</a>
 
     <hr><hr>
-
+<!-- Почитать насчет снипит -->
     <ul class="menu">
       <li class="menu__item">
         <a href="#" class="menu__link">About amid</a>
@@ -300,6 +304,7 @@
 
     <hr><hr>
 
+    <!-- вопрос к постоению скелета, top, забрал стили icon -->
     <div class="card-small">
       <div class="card-small__top">
         <svg class="card-small__icon">
@@ -307,6 +312,7 @@
         </svg>
       </div>
       <div class="card-small__bottom">
+        <!-- нужна обертка для title, p, button,расчипление на независимые элементы -->
         <h3 class="title title--h3 card-small__title">Business Growing Support</h3>
         <p class="card-small__txt">Get every necessary support to grow as business startup</p>
         <a href="" class="button button--dark card-small__button">Learn More
@@ -324,6 +330,7 @@
         <img class="card-big__img" src="/src/img/omedic.png" alt="">
       </div>
       <div class="card-big__bottom">
+        <!-- такое же нарекание Разделение элементов -->
         <h3 class="title title--h3 card-big__title">JobHub Job Finding Website</h3>
         <p class="card-big__txt">This website has become one of the best ux interface  for users with an beautiful ui and also lucrative fot upcoming startups in the sectors</p>
         <a href="" class="button button--bg-orange card-big__button">View More Work
@@ -345,6 +352,7 @@
         <img src="src/img/Rectangle6.jpg" alt="" class="card-full__img">
       </div>
       <div class="card-full__bottom">
+        <!-- такое же нарекание Разделение элементов -->
         <h3 class="title title--h3 card-full__title">Business Growing Support</h3>
         <p class="card-full__txt">Get every necessary support to grow as business startup</p>
         <a href="" class="button button--dark card-full__button">Learn More
